# zerobase-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic.cpp  multi_transport_advanced.cpp  multi_transport_basic.cpp
include/: configs.h  result.hpp  sockets.h  zerobase.h
src/: sockets.cpp  zerobase.cpp
src/include/: macros.h
tests/: CMakeLists.txt  test_main.cpp
